<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Misc -->
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_title">Do you really want to delete ?</string>
    <string name="error_occurred">An error occurred</string>
    <string name="unit">lbs</string>
    <string name="na">n/a</string>

    <!-- Activity names -->
    <string name="app_name">MuscuBoost</string>
    <string name="settings_name">Settings</string>
    <string name="registration_name">Registration</string>
    <string name="profil_name">Profil</string>
    <string name="schedule_name">Schedule</string>
    <string name="training_showcase_name">Training</string>
    <string name="train_name">Training in progress</string>
    <string name="chrono_name">Chronometer</string>
    <string name="exercise_name">Exercises</string>
    <string name="add_exercise_name">Add exercise</string>
    <string name="details_name">Details</string>
    <string name="statistics_name">Statistics</string>

    <!-- Main activity -->
    <string name="hello">Hello</string>
    <string name="registration">Registration</string>
    <string name="registration_message">You must register before start</string>
    <string name="signin">Sign in</string>
    <string name="main_training">My trainings</string>
    <string name="main_exercise">Exercises</string>
    <string name="main_stats">My statistics</string>
    <string name="main_details">My details</string>
    <string name="main_chrono">Chronometer</string>
    <string name="main_settings">Settings</string>

    <!-- Profil activity -->
    <string name="latest_input">Latest data inputted on the</string>
    <string name="graphic_insufficient_data">Insufficient data for a graphic</string>
    <string name="weight">Weight</string>
    <string name="global_average">Global average</string>
    <string name="years">years</string>

    <!-- Settings activity -->
    <string name="erase_data">Erase data</string>
    <string name="erase_data_message">This will delete your whole data&#8230;\nAre you really sure ?</string>

    <!-- Schedule activity -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="empty_row">Rest</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Add/Edit slot dialog -->
    <string name="add_slot_new">New</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="training">Training</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="add_slot_empty_slot_list">No training available</string>
    <string name="new_training">New training name</string>
    <string name="rename_training">Rename training :</string>
    <string name="training_in_use">This training is currently in use in your schedule.</string>

    <!-- Training showcase activity -->
    <string name="training_empty_exercise_list">Not any exercise</string>
    <string name="training_start">Start training</string>
    <string name="new_exercises">New exercises</string>
    <string name="no_exercise_available">No exercise available</string>

    <!-- Train activity -->
    <string name="notif_training">Training</string>
    <string name="notif_training_desc">Notification during an ongoing training</string>
    <string name="series">Series</string>
    <string name="exercise">Exercise</string>
    <string name="latest_series_count">During the latest training : %s series</string>
    <string name="latest_weight">During the latest training : %s lbs</string>
    <string name="type_lifted_weight">Type the lifted weight :</string>
    <string name="training_over">Training over !</string>
    <string name="stop_training">Stop training</string>
    <string name="stop_training_confirm">Do you really want to stop training ?</string>
    <string name="statistics">Statistics</string>
    <string name="lifted_weight">Lifted weight</string>
    <string name="series_count">Series count</string>
    <string name="save_quit">Save &amp; quit</string>

    <!-- Stat activity -->
    <string name="by_muscle">By muscle</string>
    <string name="by_exercise">By exercise</string>
    <string name="insufficient_data">Insufficient data</string>
    <string name="graphic_toast">Date : %s\nAverage weight : %s lbs</string>
    <string name="graphic_series_title">Average weight/day</string>

    <!-- Chronometer activity -->
    <string name="chrono_start">Start</string>
    <string name="chrono_pause">Pause</string>
    <string name="chrono_lap">Lap</string>
    <string name="chrono_resume">Resume</string>
    <string name="chrono_reset">Reset</string>

    <!-- Add exercise activity -->
    <string name="add_exercise_name_label">Name</string>
    <string name="add_exercise_image_label">Image</string>
    <string name="add_exercise_import_img">Import image</string>
    <string name="add_exercise_remove_img">Remove image</string>
    <string name="add_exercise_description_label">Description</string>

</resources>
