<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExerciseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/exercise_title"
            style="@style/schedule.addSlot.label"
            android:labelFor="@id/editTxt_exercise_title"
            android:text="@string/add_exercise_name_label" />

        <EditText
            android:id="@+id/editTxt_exercise_title"
            style="@style/schedule.addSlot.label" />

        <TextView
            android:id="@+id/exercise_image"
            style="@style/schedule.addSlot.label"
            android:text="@string/add_exercise_image_label" />

        <ImageView
            android:id="@+id/selected"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/import_img"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_exercise_import_img" />

        <Button
            android:id="@+id/remove_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_exercise_remove_img"
            android:visibility="gone" />

        <TextView
            android:id="@+id/exercise_description"
            style="@style/schedule.addSlot.label"
            android:labelFor="@id/editTxt_exercise_description"
            android:text="@string/add_exercise_description_label" />

        <EditText
            android:id="@+id/editTxt_exercise_description"
            style="@style/schedule.addSlot.label"
            android:inputType="textMultiLine"
            android:lines="3"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/add"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/add" />
    </LinearLayout>
</ScrollView>