<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ChronoActivity">

    <TextView
        android:id="@+id/timer_value"
        style="@style/chrono.timer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btns_container"
        android:layout_below="@id/timer_value"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/lap_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/btns_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start"
            style="@style/chrono.button"
            android:onClick="startChrono"
            android:text="@string/chrono_start" />

        <LinearLayout
            android:id="@+id/playing_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_pause"
                style="@style/chrono.button"
                android:onClick="pauseChrono"
                android:text="@string/chrono_pause" />

            <Button
                android:id="@+id/btn_lap"
                style="@style/chrono.button"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="lapChrono"
                android:text="@string/chrono_lap" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/paused_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_resume"
                style="@style/chrono.button"
                android:onClick="resumeChrono"
                android:text="@string/chrono_resume" />

            <Button
                android:id="@+id/btn_reset"
                style="@style/chrono.button"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="resetChrono"
                android:text="@string/chrono_reset" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>